Pridání MovementTest, komentace tříd GameData a CommandHandler, zkrášlení výpisu, oprava chyb.